fix: fixed the redirecting flickering

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,6 @@
 html {
 	font-size: 62.5%;
 }
+.app-main {
+	min-height: 100vh;
+}
